src/app/components/HeaderMenu/styles.css
.NLT__header-menu {
	padding: 4px 10px;
	cursor: default;
}

.NLT__header-menu-item:focus-visible {
	outline: 1px solid blue;
}

.NLT__header-menu-header-container {
	display: flex;
	margin-bottom: 5px;
	font-size: 0.95rem;
}

.NLT__header-menu-ul {
	padding: 0;
	margin: 0;
}

.NLT__header-menu-header {
	font-weight: 700;
	padding-left: 5px;
}

.NLT__header-menu-item {
	font-size: 0.9rem;
	display: flex;
	align-items: center;
	padding: 0;
	margin: 0;
}

.NLT__header-menu-input {
	width: 150px !important;
}

